src/styles/bookshelf.css
.bookshelf {
    padding: 20px;
    margin: 10px;
    max-height: 80%;
    overflow-y: scroll;
}
.bookshelf::-webkit-scrollbar {
    width: 10px;
    margin: 10px;
}

.bookshelf::-webkit-scrollbar-thumb {
    background-color: lightgray;
    border-radius: 10px;
}

.bookshelf::-webkit-scrollbar-thumb:hover {
    background-color: gray;
    border-radius: 10px;
}

.bookshelf::-webkit-scrollbar-track {
    /* background-color: #f1f1f1; */
    border-radius: 10px;
}

.error-message{
    font-size: 50px;
    font-weight: bolder;
}
.bookshelf .title {
    font-size: 32px;
    margin: 0px 0px 10px;
    font-weight: 700;
}
.bookshelf .categories {
    display: flex;
    justify-content: center;
    gap: 10px;
}
.bookshelf .categories span {
    font-size: 14px;
    padding: 10px 30px;
    color: #747479;
    border-radius: 20.09px;
    background: #F5F5F5;
    cursor: pointer;
}
.bookshelf .categories span:hover {
    background: rgba(113, 64, 193, 0.15);
}
.book-row {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items:center;
    flex-wrap: wrap;
    gap: 10px;
    
    margin-top: 30px;
}
.book {
    display: flex;
    flex: 0 1 300px;
    width: 60%;
    padding: 10px;
    background-color: whitesmoke;
    border-radius: 50px;
    margin-top: 3%;
    transition: 300ms;
}
.book:hover{
    background-color: lightgray;
    transform: scale(105%);
}
.book .preview {
    height: 100%;
    width: 40%;
    display: flex;
    align-items: center;
    padding: 5px;
}
.book .preview img {
    width: 100%;    
    border-radius: 10px;
}
.book .meta {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 15px 0px;
}
.book .meta .category, .book .meta .users-rating{
    padding: 6px 25px;
    gap: 10px;
    border-radius: 20.09px;
    background: darkgray;
    height: fit-content;
    width: fit-content;
}

.data{
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 40px;
}

.book .users {
    display: flex;
    align-items: center;
    gap: 5px;
}
.book .rating {
    display: flex;
    align-items: center;
    gap: 5px;
}
.book .meta .users-rating {
    display: flex;
    padding: 6px 10px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    border-radius: 5px;
    background: #FAFAFA;
}
.texts{
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap:7px;
}
.book .title {
    color: #2D2D2D;
    margin: 0;
    font-size: 18px;
    font-weight: 700;
    line-height: normal;
    letter-spacing: -0.36px;
}
.book .description {
    display: -webkit-box;
    width: 268px;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    overflow: hidden;
    margin-top: 0;
    color: #747479;
    text-overflow: ellipsis;
    font-size: 14px;
    font-weight: 400;
}

